# paraPhysiCell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
sample_projects/: helpers.cpp  helpers.h
sample_projects/biorobots/: CMakeLists.txt  custom.cpp  custom.h  main.cpp
sample_projects/biorobots/config/: PhysiCell_settings.xml
sample_projects/heterogeneity/: CMakeLists.txt  custom.cpp  custom.h  main.cpp
sample_projects/heterogeneity/config/: PhysiCell_settings.xml
sample_projects/interactions/: CMakeLists.txt  custom.cpp  custom.h  main.cpp
sample_projects/sem-contact/: CMakeLists.txt  custom.cpp  custom.h
sample_projects/sem-contact/config/: PhysiCell_settings.xml
sample_projects/sem-intrusion/: CMakeLists.txt  custom.cpp  main.cpp
sample_projects/sem-intrusion-ring/: CMakeLists.txt  custom.cpp
sample_projects/sem-intrusion-ring/config/: PhysiCell_settings.xml
sample_projects/sem-intrusion/config/: PhysiCell_settings.xml  PhysiCell_settings_kelvin_voigt.xml  PhysiCell_settings_with_noise.xml
sample_projects/sem-playground/: CMakeLists.txt  custom.cpp
sample_projects/sem-playground/config/: PhysiCell_settings.xml
sample_projects/sem-test/: CMakeLists.txt  custom.cpp  main.cpp
sample_projects/sem-test/config/: PhysiCell_settings.xml
sample_projects/template/: CMakeLists.txt  custom.cpp  main.cpp
sample_projects/template/config/: PhysiCell_settings.xml
src/: builder.cpp  builder.h  cell.cpp  cell.h  cell_container.cpp  cell_container.h  cell_data.cpp  cell_data.h  cell_definition.cpp  cell_definition.h  cell_functions.h  data_storage_phenotype.cpp  data_storage_phenotype.h  environment.cpp  environment.h  main.cpp  phenotype.cpp  phenotype.h  random.cpp  random.h  runtime_settings.h  simulation_measurer.cpp  simulator.cpp  simulator.h  simulator_measurer.h  src.cpp  utilities.h
src/models/: kelvin_voigt_model.cpp  kelvin_voigt_model.h  morse_kv_membrane_model.cpp  morse_kv_membrane_model.h  morse_position_model.cpp  morse_position_model.h  position_model.h  standard_position_model.cpp  standard_position_model.h
src/modules/: builder.cpp  builder.h
src/original/: basic_signaling.cpp  basic_signaling.h  cell_parameters.h  constants.cpp  constants.h  custom_cell_data.cpp  custom_cell_data.h  implicit_storage_phenotype.cpp  implicit_storage_phenotype.h  pugixml_helper.cpp  pugixml_helper.h  rules.cpp  rules.h  signal_behavior.cpp  signal_behavior.h  standard_models.cpp  standard_models.h  user_parameters.cpp  user_parameters.h
src/original/core/: cell_parameters.cpp  cell_parameters.h  custom_cell_data.cpp  implicit_storage_phenotype.cpp  implicit_storage_phenotype.h  rules.cpp  rules.h  signal_behavior.cpp  standard_models.cpp  standard_models.h
src/original/modules/: BioFVM_MultiCellDS.cpp  BioFVM_MultiCellDS.h  PhysiCell_MultiCellDS.cpp  PhysiCell_MultiCellDS.h  geometry.cpp  geometry.h  matlab.cpp  matlab.h  pathology.cpp  pathology.h  pugixml_helper.cpp  settings.cpp  settings.h  svg.cpp  svg.h  timer.cpp  timer.h  various_output.cpp  various_output.h  vector_utils.cpp  vector_utils.h
src/solver/: solver.cpp  solver.h
src/solver/host/: common_solver.cpp  common_solver.h  containers_solver.cpp  containers_solver.h  interactions_solver.cpp  interactions_solver.h  kelvin_voigt_solver.cpp  kelvin_voigt_solver.h  mechanics_solver.cpp  mechanics_solver.h  morse_kv_membrane_solver.cpp  morse_kv_membrane_solver.h  morse_position_solver.cpp  morse_position_solver.h  position_solver.cpp  position_solver.h  solver_helper.h  standard_position_solver.cpp  standard_position_solver.h  velocity_solver.cpp  velocity_solver.h
test/: test.cpp
